--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,7 +12,7 @@
         <div class="topbar">
             <div class="container clearfix">
                 <div class="col w-20">
-                    <a href="#"><img src="" alt="Discord" id="logo"></a>
+                    <a href="#"><img src="./img/logo.svg" alt="Discord" id="logo"></a>
                 </div>
                 <div class="col w-60 text-center">
                     <nav class="topmenu">
@@ -31,6 +31,7 @@
             </div>
         </div>
         <div class="jumbotron">
+            
             <div class="container">
 
             </div>
