--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
 </head>
+
 <body>
     <header>
         <div class="topbar">
@@ -22,7 +24,7 @@
                             <li><a href="#">Nitro</a></li>
                             <li><a href="#">Sicurezza</a></li>
                             <li><a href="#">Assistenza</a></li>
-                        </ul>    
+                        </ul>
                     </nav>
                 </div>
                 <div class="col w-20 text-right">
@@ -31,9 +33,19 @@
             </div>
         </div>
         <div class="jumbotron">
-            
-            <div class="container">
-
+            <div class="container text-center">
+                <h2>Il tuo posto per parlare</h2>
+                <p>
+                    Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o
+                    semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più
+                    facile chiacchierare ogni giorno e ritrovarsi più spesso.
+                </p>
+                <div class="btn btnwhite btnbig">
+                    &darr; Scarica per Windows
+                </div>
+                <div class="btn btnblack btnbig">
+                    Apri Discord nel tuo browser
+                </div>
             </div>
         </div>
     </header>
@@ -52,4 +64,5 @@
 
     </footer>
 </body>
+
 </html>
