--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 
 <head>
     <meta charset="UTF-8">
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
 </head>
-
 <body>
+
+<!-- header -->
+
     <header>
+
+        <!-- top bar -->
+
         <div class="topbar">
             <div class="container clearfix">
                 <div class="col w-20">
@@ -32,6 +37,9 @@
                 </div>
             </div>
         </div>
+
+        <!-- jumbotron -->
+
         <div class="jumbotron">
             <div class="container text-center">
                 <h2>Il tuo posto per parlare</h2>
@@ -50,13 +58,28 @@
         </div>
     </header>
 
-
+<!-- main -->
 
     <main>
-        <section></section>
-        <section></section>
-        <section></section>
-        <section></section>
+
+        <!-- 1st section -->
+        <section class="right">
+            <div class="container">
+
+            </div>
+            <div>
+
+            </div>
+        </section>
+        <section class="left">
+
+        </section>
+        <section class="right">
+
+        </section>
+        <section class="final">
+
+        </section>
     </main>
 
 
