--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" href="./style/style.css">
     <title>Document</title>
 </head>
+
 <body>
 
-<!-- header -->
+    <!-- header -->
 
     <header>
 
@@ -58,25 +59,38 @@
         </div>
     </header>
 
-<!-- main -->
+    <!-- main -->
 
-    <main>
+    <main class="container">
 
         <!-- 1st section -->
-        <section class="right">
-            <div class="container">
+        <section class="right ">
 
+            <div class="col clearfix w-65">
+                <img src="./img/item1.svg" alt="img1">
             </div>
-            <div>
 
+            <div class="col w-35">
+                <h2>
+                    Un luogo a invito con tutto lo spazio necessario per parlare
+                </h2>
+                <p>
+                    I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o
+                    semplicemente parlare della tua giornata senza intasare una chat di gruppo.
+                </p>
             </div>
+
+            <!-- 2nd section -->
         </section>
         <section class="left">
 
+            <!-- 3rd section -->
         </section>
         <section class="right">
 
         </section>
+
+        <!-- 4rt section -->
         <section class="final">
 
         </section>
