--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             </div>
 
             <div class="col w-35">
-                <h2 class="title">
+                <h2 class="text-left">
                     Un luogo a invito con tutto lo spazio necessario per parlare
                 </h2>
                 <p>
@@ -89,7 +89,7 @@
             <section class="container">
 
                 <div class="col w-35">
-                    <h2 class="title">
+                    <h2 class="text-left">
                         Dove trovarsi è facile
                     </h2>
                     <p>
@@ -116,7 +116,7 @@
             </div>
 
             <div class="col w-35">
-                <h2 class="title">
+                <h2 class="text-left">
                     Da pochi a un fandom
                 </h2>
                 <p>
@@ -129,8 +129,28 @@
 
 
         <!-- 4rt section -->
-        <section class="final">
+        <section class="text-center final bgwave">
+            <div class="container">
+                <div>
+                    <h2>
+                        Tecnologia affidabile per tenersi in contatto
+                    </h2>    
+                    <p class="text-center">
+                        Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai
+                        ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con
+                        la condivisione schermo.
+                    </p>
+                </div>
+                <div>
+                    <img src="./img/item4-big.svg" alt="img4">
+                </div>
 
+                <div>
+                    <h3>
+                        Pronto a iniziare la tua avventura?
+                    </h3>
+                </div>
+            </div>
         </section>
     </main>
 
