--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
 
         <!-- 4rt section -->
-        <section class="text-center final bgwave">
+        <section class="text-center bgwave">
             <div class="container">
                 <div>
                     <h2>
@@ -145,16 +145,18 @@
                     <img src="./img/item4-big.svg" alt="img4">
                 </div>
 
-                <div>
+                <!-- download -->
+                <div  class="final">
                     <h3>
                         Pronto a iniziare la tua avventura?
                     </h3>
                 </div>
+                <div class="btn btnbig btnviolet">
+                    &darr; Scarica per Windows
+                </div>
             </div>
         </section>
     </main>
-
-
     <footer>
 
     </footer>
