--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+        integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style/style.css">
-    <title>Document</title>
+    <title>Discord</title>
 </head>
 
 <body>
@@ -50,10 +53,15 @@
                     facile chiacchierare ogni giorno e ritrovarsi più spesso.
                 </p>
                 <div class="btn btnwhite btnbig">
-                    &darr; Scarica per Windows
+                    <a href="#">
+                        <i class="fas fa-long-arrow-alt-down"></i>
+                        Scarica per Windows
+                    </a>
                 </div>
                 <div class="btn btnblack btnbig">
-                    Apri Discord nel tuo browser
+                    <a href="#" class="btnblack">
+                        Apri Discord nel tuo browser
+                    </a>
                 </div>
             </div>
         </div>
@@ -85,9 +93,7 @@
 
         <!-- 2nd section -->
         <section class="bgwave">
-
             <section class="container">
-
                 <div class="col w-35">
                     <h2 class="text-left">
                         Dove trovarsi è facile
@@ -98,13 +104,10 @@
                         lì e unirsi istantaneamente senza dover chiamare.
                     </p>
                 </div>
-
                 <div class="col clearfix w-65">
                     <img src="./img/item2.svg" alt="img2">
                 </div>
-
             </section>
-
         </section>
 
 
@@ -134,7 +137,7 @@
                 <div>
                     <h2>
                         Tecnologia affidabile per tenersi in contatto
-                    </h2>    
+                    </h2>
                     <p class="text-center">
                         Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai
                         ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con
@@ -146,19 +149,84 @@
                 </div>
 
                 <!-- download -->
-                <div  class="final">
+                <div class="final">
                     <h3>
                         Pronto a iniziare la tua avventura?
                     </h3>
                 </div>
-                <div class="btn btnbig btnviolet">
-                    &darr; Scarica per Windows
+                <div class="btn btnviolet btnbig">
+                    <a href="#">
+                        <i class="fas fa-long-arrow-alt-down"></i>
+                        Scarica per Windows
+                    </a>
                 </div>
             </div>
         </section>
     </main>
-    <footer>
 
+    <!-- footer -->
+    <footer>
+        <div class="container clearfix">
+            <div class="col w-20">
+                <h4>
+                    Il tuo posto per parlare
+                </h4>
+
+                <!-- language selector -->
+                <div>
+                    <img src="./img/ita.png" alt="Italiano" class="lang-ico">
+                    Italiano
+                    <i class="fas fa-angle-down"></i>
+                </div>
+
+                <!-- socials -->
+                <div class="icons">
+                    <a href="https://twitter.com/discord" target="_blank">
+                        <i class="fab fa-twitter"></i>
+                    </a>
+                    <a href="https://www.instagram.com/discord/" target="_blank">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+
+                    <a href="https://www.facebook.com/discord/" target="_blank">
+                        <i class="fab fa-facebook"></i>
+                    </a>
+
+                    <a href="https://www.youtube.com/discord" target="_blank">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                </div>
+            </div>
+
+
+            <div class="col w-20">
+                <ul>
+                    <li>
+                        <h6>Prodotto</h6>
+                    </li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perché Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                </ul>
+            </div>
+
+
+            <div class="col w-20">
+
+            </div>
+
+
+            <div class="col w-20">
+
+            </div>
+
+
+            <div class="col w-20">
+
+            </div>
+        </div>
     </footer>
 </body>
 
