end markup first block

--- a/index.html
+++ b/index.html
@@ -165,7 +165,9 @@
     </main>
 
     <!-- footer -->
-    <footer>
+    <footer">
+
+        <!-- first block -->
         <div class="container clearfix">
             <div class="col w-20">
                 <h4>
@@ -198,7 +200,7 @@
                 </div>
             </div>
 
-
+            <!-- product -->
             <div class="col w-20">
                 <ul>
                     <li>
@@ -212,21 +214,56 @@
                 </ul>
             </div>
 
-
+            <!-- company -->
             <div class="col w-20">
-
+                <ul>
+                    <li>
+                        <h6>Compagnia</h6>
+                    </li>
+                    <li><a href="#">Chi siamo</a></li>
+                    <li><a href="#">Lavora con noi</a></li>
+                    <li><a href="#">Marchio</a></li>
+                    <li><a href="#">Redazione</a></li>
+                    <li><a href="#">Negozio</a></li>
+                </ul>
             </div>
 
-
+            <!-- resources -->
             <div class="col w-20">
-
+                <ul>
+                    <li>
+                        <h6>Risorse</h6>
+                    </li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perché Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perché Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                </ul>
             </div>
 
-
+            <!-- law -->
             <div class="col w-20">
-
+                <ul>
+                    <li>
+                        <h6>Norme</h6>
+                    </li>
+                    <li><a href="#">Scarica</a></li>
+                    <li><a href="#">Perché Discord</a></li>
+                    <li><a href="#">Nitro</a></li>
+                    <li><a href="#">Sicurezza</a></li>
+                    <li><a href="#">Assistenza</a></li>
+                </ul>
             </div>
         </div>
+        <!-- end first block -->
+
     </footer>
 </body>
 
