fix footer 1st block style

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                     <a href="#"><img src="./img/logo.svg" alt="Discord" id="logo"></a>
                 </div>
                 <div class="col w-60 text-center">
-                    <nav class="topmenu">
+                    <nav class="menu">
                         <ul>
                             <li><a href="#">Scarica</a></li>
                             <li><a href="#">Perché Discord</a></li>
@@ -165,43 +165,42 @@
     </main>
 
     <!-- footer -->
-    <footer">
+    <footer>
 
         <!-- first block -->
         <div class="container clearfix">
-            <div class="col w-20">
+            <div class="col w-40">
                 <h4>
                     Il tuo posto per parlare
                 </h4>
 
                 <!-- language selector -->
-                <div>
+                <div class="lang">
                     <img src="./img/ita.png" alt="Italiano" class="lang-ico">
                     Italiano
                     <i class="fas fa-angle-down"></i>
                 </div>
 
                 <!-- socials -->
-                <div class="icons">
-                    <a href="https://twitter.com/discord" target="_blank">
-                        <i class="fab fa-twitter"></i>
-                    </a>
-                    <a href="https://www.instagram.com/discord/" target="_blank">
-                        <i class="fab fa-instagram"></i>
-                    </a>
-
-                    <a href="https://www.facebook.com/discord/" target="_blank">
-                        <i class="fab fa-facebook"></i>
-                    </a>
-
-                    <a href="https://www.youtube.com/discord" target="_blank">
-                        <i class="fab fa-youtube"></i>
-                    </a>
+                <div class="icons menu col">
+                    <ul>
+                        <li><a href="https://twitter.com/discord" target="_blank">
+                            <i class="fab fa-twitter"></i>
+                        <li></a><a href="https://www.instagram.com/discord/" target="_blank">
+                            <i class="fab fa-instagram"></i>
+                        </a></li>
+                        <li><a href="https://www.facebook.com/discord/" target="_blank">
+                            <i class="fab fa-facebook"></i>
+                        </a></li>
+                        <li><a href="https://www.youtube.com/discord" target="_blank">
+                            <i class="fab fa-youtube"></i>
+                        </a></li>
+                    </ul>
                 </div>
             </div>
 
             <!-- product -->
-            <div class="col w-20">
+            <div class="col w-15">
                 <ul>
                     <li>
                         <h6>Prodotto</h6>
@@ -215,7 +214,7 @@
             </div>
 
             <!-- company -->
-            <div class="col w-20">
+            <div class="col w-15">
                 <ul>
                     <li>
                         <h6>Compagnia</h6>
@@ -229,7 +228,7 @@
             </div>
 
             <!-- resources -->
-            <div class="col w-20">
+            <div class="col w-15">
                 <ul>
                     <li>
                         <h6>Risorse</h6>
@@ -249,7 +248,7 @@
             </div>
 
             <!-- law -->
-            <div class="col w-20">
+            <div class="col w-15">
                 <ul>
                     <li>
                         <h6>Norme</h6>
