many fix end page

--- a/index.html
+++ b/index.html
@@ -52,14 +52,14 @@
                     semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più
                     facile chiacchierare ogni giorno e ritrovarsi più spesso.
                 </p>
-                <div class="btn btnwhite btnbig">
-                    <a href="#">
+                <div class="btn">
+                    <a href="#"  class="btn btnwhite btnbig">
                         <i class="fas fa-long-arrow-alt-down"></i>
                         Scarica per Windows
                     </a>
                 </div>
-                <div class="btn btnblack btnbig">
-                    <a href="#" class="btnblack">
+                <div class="btn">
+                    <a href="#" class="btn btnblack btnbig">
                         Apri Discord nel tuo browser
                     </a>
                 </div>
@@ -154,8 +154,8 @@
                         Pronto a iniziare la tua avventura?
                     </h3>
                 </div>
-                <div class="btn btnviolet btnbig">
-                    <a href="#">
+                <div>
+                    <a href="#" class="btn btnviolet btnbig">
                         <i class="fas fa-long-arrow-alt-down"></i>
                         Scarica per Windows
                     </a>
@@ -167,7 +167,7 @@
     <!-- footer -->
     <footer>
 
-        <!-- first block -->
+        <!-- 1st block -->
         <div class="container clearfix">
             <div class="col w-40">
                 <h4>
@@ -200,7 +200,7 @@
             </div>
 
             <!-- product -->
-            <div class="col w-15">
+            <div class="col botmenu w-15">
                 <ul>
                     <li>
                         <h6>Prodotto</h6>
@@ -214,7 +214,7 @@
             </div>
 
             <!-- company -->
-            <div class="col w-15">
+            <div class="col botmenu w-15">
                 <ul>
                     <li>
                         <h6>Compagnia</h6>
@@ -228,7 +228,7 @@
             </div>
 
             <!-- resources -->
-            <div class="col w-15">
+            <div class="col botmenu w-15">
                 <ul>
                     <li>
                         <h6>Risorse</h6>
@@ -248,7 +248,7 @@
             </div>
 
             <!-- law -->
-            <div class="col w-15">
+            <div class="col botmenu w-15">
                 <ul>
                     <li>
                         <h6>Norme</h6>
@@ -261,8 +261,18 @@
                 </ul>
             </div>
         </div>
-        <!-- end first block -->
+        <!-- end 1st block -->
 
+        <!-- 2nd block -->
+        <div class="container endpage">
+            <hr>
+            <div class="col w-50">
+                <a href="#"><img src="./img/logo.svg" alt="Discord"></a>
+            </div>
+            <div class="col w-50 text-right">
+                <a href="#" class="btn btnsmall btnviolet">Registrati</a>
+            </div>
+        </div>
     </footer>
 </body>
 
