fix margin blocks

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <main class="text-center">
 
         <!-- 1st section -->
-        <section class="container">
+        <section class="container block">
 
             <div class="col clearfix w-65">
                 <img src="./img/item1.svg" alt="img1">
@@ -112,7 +112,7 @@
 
 
         <!-- 3rd section -->
-        <section class="container">
+        <section class="container block">
 
             <div class="col clearfix w-65">
                 <img src="./img/item3.svg" alt="img3">
