fix alignment text

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <img src="./img/item1.svg" alt="img1">
             </div>
 
-            <div class="col w-35">
+            <div class="col w-35" id="p1">
                 <h2 class="text-left">
                     Un luogo a invito con tutto lo spazio necessario per parlare
                 </h2>
@@ -94,7 +94,7 @@
         <!-- 2nd section -->
         <section class="bgwave">
             <section class="container">
-                <div class="col w-35">
+                <div class="col w-35" id="p2">
                     <h2 class="text-left">
                         Dove trovarsi è facile
                     </h2>
